Remove obj/ build artifacts from tracking and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,12 @@
+# Visual Studio / .NET build artifacts
 .vs/
 bin/
 obj/
+
+# User-specific files
+*.user
+*.suo
+*.userosscache
+*.sln.docstates
 *.user
 *.suo
