Tuan 09: EF Core basic

--- a/SportsStoreWebApp/appsettings.json
+++ b/SportsStoreWebApp/appsettings.json
@@ -1,4 +1,7 @@
 {
+	"ConnectionStrings": {
+		"SportsStoreConnection": "Server=localhost;Database=SportsStoreDB;User Id=sa;Password=@Tako0w0skw;Encrypt=True;TrustServerCertificate=True;"
+	},
 	"Logging": {
 		"LogLevel": {
 			"Default": "Information",
