--- a/SportsStoreWebApp/SportsStoreWebApp.csproj
+++ b/SportsStoreWebApp/SportsStoreWebApp.csproj
@@ -2,6 +2,15 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SportsStore.Domain\SportsStore.Domain.csproj" />
+    <ProjectReference Include="..\SportsStore.Infrastructure\SportsStore.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.11">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.11" />
   </ItemGroup>
 
   <PropertyGroup>
