Tuan 10: EF Core, CRUD and Data Loading

--- a/SportsStoreWebApp/appsettings.json
+++ b/SportsStoreWebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
 	"ConnectionStrings": {
-		"SportsStoreConnection": "Server=localhost;Database=SportsStoreDB;User Id=sa;Password=@Tako0w0skw;Encrypt=True;TrustServerCertificate=True;"
+		"SportsStoreConnection": "Server=localhost;Database=SportsStoreDB;User Id=sa;Password=@Tako0w0skw;Encrypt=False;"
 	},
 	"Logging": {
 		"LogLevel": {
