--- a/SportsStoreWebApp/appsettings.json
+++ b/SportsStoreWebApp/appsettings.json
@@ -1,16 +1,17 @@
 {
-	"ConnectionStrings": {
-		"SportsStoreConnection": "Server=localhost;Database=SportsStoreDB;User Id=sa;Password=@Tako0w0skw;Encrypt=False;"
-	},
-	"Logging": {
-		"LogLevel": {
-			"Default": "Information",
-			"Microsoft.AspNetCore": "Warning"
-		}
-	},
-	"AllowedHosts": "*",
-	"PagingSettings": {
-		"ItemsPerPage": 4,
-		"MaxPagesToShow": 5
-	}
+  "ConnectionStrings": {
+    "SportsStoreConnection": "Server=localhost;Database=SportsStoreDB;User Id=sa;Password=@Tako0w0skw;Encrypt=False;",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=SportsStoreWebApp;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+  "PagingSettings": {
+    "ItemsPerPage": 4,
+    "MaxPagesToShow": 5
+  }
 }
